Fix build: Java 21 for Trino 439 SPI, drop Guava dependency