@@ -1,6 +1,5 @@
 package dev.cyphera.trino;
 
-import com.google.common.collect.ImmutableSet;
 import io.trino.spi.Plugin;
 
 import java.util.Set;
@@ -8,6 +7,6 @@ import java.util.Set;
 public class CypheraPlugin implements Plugin {
     @Override
     public Set<Class<?>> getFunctions() {
-        return ImmutableSet.of(CypheraFunctions.class);
+        return Set.of(CypheraFunctions.class);
     }
 }
